# Projet_AuditIQ

./: .env.example  .gitignore  .prettierignore  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml
apps/api/: README.md  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/audit_engine/: __init__.py  anomaly_iqr.py  dataset_analysis.py  errors.py  intersectional.py  llm_audit.py  llm_metrics.py  llm_prompt_bank.py  llm_refusal.py  llm_sentiment.py  m1_supervised.py  metrics.py  types.py  unsupervised.py  unsupervised_metrics.py
apps/api/app/core/: config.py  db.py  deps.py  errors.py  logging.py  ratelimit.py  security.py
apps/api/app/integrations/: email.py  llm_target.py  storage.py
apps/api/app/interpretation/: _findings.py  _json.py  _recommendations.py  base.py  gemini.py  m1.py  m2.py  m3.py  recommendations_catalog.py
apps/api/app/models/: __init__.py  audit.py  audit_result.py  dataset.py  invitation.py  organization.py  report.py  user.py
apps/api/app/reporting/: __init__.py  excel.py  format.py  html.py  pdf_client.py
apps/api/app/routers/: audits.py  auth.py  dashboard.py  datasets.py  org.py
apps/api/app/schemas/: audit.py  auth.py  dashboard.py  dataset.py  org.py
apps/api/app/services/: audit_service.py  dashboard_service.py  dataset_service.py  llm_test_connection.py  report_service.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial.py  0002_m2.py  0003_reports.py  0004_m3.py  0005_audit_error.py  0006_audits_code_per_org.py  0007_dataset_analysis_cache.py  0008_org_fields_and_invitations.py  0009_audit_archived_at.py
apps/api/tests/api/: test_app.py  test_audit_interpretation.py  test_audit_service.py  test_audit_service_async.py  test_audit_service_m1.py  test_audit_service_m2.py  test_audit_service_m3.py  test_audits_archive_delete.py  test_audits_router.py  test_config.py  test_config_async.py  test_config_cors_guard.py  test_config_db_url.py  test_config_gemini.py  test_config_m3.py  test_config_pdf.py  test_config_storage.py  test_dashboard_router.py  test_dashboard_service.py  test_dataset_service.py  test_datasets_router.py  test_db.py  test_deps.py  test_engine_error_handler.py  test_errors.py  test_excel_report.py  (+38 more)
(+424 files in other folders)
