[project]
name = "auditiq-api"
version = "0.1.0"
description = "AuditIQ — FastAPI service for fairness audits, reporting and Gemini-powered interpretation."
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = { text = "UNLICENSED" }
authors = [{ name = "AuditIQ" }]

dependencies = [
  # web framework
  "fastapi[standard]>=0.115.0,<0.116",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0,<3",
  "pydantic-settings>=2.5.2",
  # auth
  "PyJWT[crypto]>=2.9.0",
  "passlib[bcrypt]>=1.7.4",
  # rate limiting
  "slowapi>=0.1.9",
  # db
  "SQLAlchemy>=2.0.34",
  "asyncpg>=0.29.0",
  "alembic>=1.13.2",
  "greenlet>=3.0.3",
  # observability + logs
  "structlog>=24.4.0",
  "httpx>=0.27.2",
  # data / fairness engine
  "pandas>=2.2.2",
  "numpy>=1.26.4,<2.0.0",
  "scikit-learn>=1.5.1",
  "scipy>=1.13.1",
  "statsmodels>=0.14.2",
  # llm
  "google-genai>=0.3.0",
  "mistralai>=1.0.3",
  # storage + supabase
  "supabase>=2.7.0",
  # excel reporting
  "openpyxl>=3.1.5",
  # scheduling
  "APScheduler>=3.10.4",
  # misc
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.2",
  "ruff>=0.6.4",
  "mypy>=1.11.2",
  "types-requests",
  "respx>=0.21.1",
  "aiosqlite>=0.20.0",
  "fairlearn>=0.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ----------------------------------------------------------------------------
# Tooling
# ----------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "C4"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803"]
"migrations/env.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = ["migrations/", "tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
